# cdn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.release.yaml  compose.yaml  create_signature.sh  docker-compose.yaml  log4rs.yaml  nginx.conf  temp.html  upload.html
assets/: config.toml
cdn/avatars/1234/: hash
certs/: rs-cdn.pub  staging.pem  staging.pub  staging2.pem
src/: cache.rs  cdn.rs  config.rs  lib.rs  macros.rs  main.rs  storage.rs
src/cdn/: mod.rs  rest.rs
src/rest/: mod.rs  read.rs  write.rs
