[package]
name = "rs-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.0", default-features = false, features = ["rustls", "macros"]}
md5 = "0.7.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread"] }
