[package]
name = "rs-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = {version = "4.4.0", default-features = false, features = ["rustls", "macros"]}
anyhow = "1.0.75"
futures-util = "0.3.28"
image = "0.24.7"
md5 = "0.7.0"
serde = { version = "1.0.189", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread"] }
